# event_listener

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/config/: ConfigLoader.h  Configuration.h  GlobalConfig.h
include/core/: ApplicationBuilder.h
include/email/: EmailContentBuilder.h  EmailFormatter.h  EmailNotificationListener.h  EmailProviderFactory.h  EmailSender.h
include/events/: EventDispatcher.h  EventTypes.h  IFileSystemListener.h
include/filesystem/: FileExtensionFilter.h  FileSystemHelper.h  FileSystemWatcher.h  StringConverter.h
include/input/: DirectoryInputHandler.h  EmailInputHandler.h  ExtensionInputHandler.h  ProviderConverter.h
include/logging/: ConsoleColor.h  ConsoleLogger.h
include/utils/: TimeFormatter.h
src/config/: ConfigLoader.cpp  Configuration.cpp
src/core/: ApplicationBuilder.cpp
src/email/: EmailContentBuilder.cpp  EmailFormatter.cpp  EmailNotificationListener.cpp  EmailSender.cpp
src/events/: EventDispatcher.cpp
src/filesystem/: FileExtensionFilter.cpp  FileSystemHelper.cpp  FileSystemWatcher.cpp  StringConverter.cpp
src/input/: DirectoryInputHandler.cpp  EmailInputHandler.cpp  ExtensionInputHandler.cpp  ProviderConverter.cpp
src/logging/: ConsoleColor.cpp  ConsoleLogger.cpp
src/utils/: TimeFormatter.cpp
